refactor: update Index and StopWords classes for improved subIndex management and stop words handling